--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+android.enableJetifier=true
+
+# 运行到vivo真机，安装不了问题
+android.injected.testOnly=false
